# flutter_secure_storage_windows

./: .gitignore  .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml  refreshToken  test.txt
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_secure_storage_windows.dart
test/: flutter_secure_storage_windows_test.dart
windows/: CMakeLists.txt  CMakeSettings.json  flutter_secure_storage_windows_plugin.cpp
